name:                civskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/civskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Civskell.Data.Types, Civskell.Data.World, Civskell.Data.Player, Civskell.Tech.Network, Civskell.Tech.Encrypt, Civskell.Tech.Parse, Civskell.Packet.Serverbound, Civskell.Packet.Clientbound, Civskell.Data.Logging, Civskell.Data.Networking, Civskell.Entity.Mob
  build-depends:       base >= 4.7 && < 5, network, parsec, bytestring, utf8-string, random, cryptonite, pretty-hex, time, http-client, http-client-tls, AES, reee-monads, zlib, cereal, nbt, containers, binary-strict, attoparsec, ghost-buster
  default-language:    Haskell2010

executable civskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -fprof-auto -rtsopts -with-rtsopts=-N
  build-depends:       base, HsOpenSSL, civskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/civskell
