name:                civskell
version:             0.1.0.0
synopsis:            Civcraft-like minecraft server in Haskell
description:         Please see README.md
homepage:            https://github.com/Lazersmoke/civskell
license:             BSD3
license-file:        LICENSE
author:              Sam Quinn
maintainer:          lazersmoke@gmail.com
copyright:           2017 Sam Quinn
category:            Mineman
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Civskell, Civskell.Data.Types, Civskell.Data.World, Civskell.Tech.Network, Civskell.Tech.Encrypt, Civskell.Packet.Serverbound, Civskell.Packet.Clientbound, Civskell.Data.Logging, Civskell.Data.Networking, Civskell.Entity, Civskell.Entity.Object, Civskell.Tile, Civskell.Item, Civskell.Entity.Base, Civskell.Window, Civskell.Versions.Vanilla, Civskell.Versions.Protocol, Civskell.Data.Util, Civskell.Data.Protocol, Civskell.Data.Configuration, Civskell.Data.Common
  other-modules:       Civskell.Entity.Item, Civskell.Entity.Creeper, Civskell.Block.Stone
  build-depends:       base >= 4.7 && < 5, hashable, network, bytestring, utf8-string, random, cryptonite, pretty-hex, time, http-client, http-client-tls, AES, zlib, bytes, cereal, nbt, containers, binary-strict, attoparsec, ghost-buster, aeson, unordered-containers, text, stm, vector, lens, array, mtl
  default-language:    Haskell2010

executable civskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -fprof-auto
  build-depends:       base, HsOpenSSL, civskell
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Spec.hs
  build-depends: base >= 4.7 && < 5, hspec, civskell, QuickCheck

source-repository head
  type:     git
  location: https://github.com/Lazersmoke/civskell
